tests/invalid/for_tuple_unpack_range_unsupported/main.py
def run_case() -> None:
    for a, b in range(4):
        print(a, b)


if __name__ == "__main__":
    run_case()
